--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "mae"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+chrono = "0.4.31"
+clap = { version = "4.4.16", features = ["derive"] }
+current_platform = "0.2.0"
+mail-parser = "0.9.2"
